force-app/main/default/objects/Customer_Survey__c/fields/Account_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_SurveysSqfQ</relationshipName>
    <type>Lookup</type>
</CustomField>