force-app/main/default/objects/Customer_Survey__c/fields/Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Address__c</fullName>
    <label>Agency Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>