force-app/main/default/objects/Customer_Survey__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>