force-app/main/default/objects/Customer_Survey__c/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>