force-app/main/default/objects/Customer_Survey__c/fields/All_deficiencies_addressed__c.field-meta.xml
<CustomField>
    <fullName>All_deficiencies_addressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All deficiencies addressed?</label>
    <type>Checkbox</type>
</CustomField>