force-app/main/default/objects/Customer_Survey__c/fields/Area_for_Improvment__c.field-meta.xml
<CustomField>
    <fullName>Area_for_Improvment__c</fullName>
    <description>Survey Question 11. Area for Improvement - In what area(s) do you think American Technologies, Inc. fell short of your expectations?</description>
    <label>Area for Improvment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>