force-app/main/default/objects/Customer_Survey__c/fields/ATI_Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>ATI_Overall_Experience__c</fullName>
    <description>Question 9:  Please rate your overall experience with the ATI [Division] team.</description>
    <inlineHelpText>Please rate your overall experience with the ATI [Division] team.</inlineHelpText>
    <label>ATI Overall Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>