force-app/main/default/objects/Customer_Survey__c/fields/ATI_Team__c.field-meta.xml
<CustomField>
    <fullName>ATI_Team__c</fullName>
    <description>Question 8 :  Was the ATI team courteous, organized, and professional?</description>
    <inlineHelpText>Was the ATI team courteous, organized, and professional?</inlineHelpText>
    <label>ATI Team</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>