force-app/main/default/objects/Customer_Survey__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch Manager lookup field populated via Process Builder flow &apos;Branch Manager Population onto Survey&apos; from associated Job record, in order to send them an email alert when there is a poor survey score related to a job originating in their office.</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys6</relationshipName>
    <type>Lookup</type>
</CustomField>