force-app/main/default/objects/Customer_Survey__c/fields/Construction_Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Construction_Office_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Office Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys6SuY</relationshipName>
    <type>Lookup</type>
</CustomField>