force-app/main/default/objects/Customer_Survey__c/fields/Consulting_Report__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Report__c</fullName>
    <inlineHelpText>Was the consulting deliverable (estimate, report, or analysis) accurate?</inlineHelpText>
    <label>Consulting Report</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>