force-app/main/default/objects/Customer_Survey__c/fields/Consulting_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Satisfied__c</fullName>
    <inlineHelpText>Was the consulting deliverable submitted in a timely fashion?</inlineHelpText>
    <label>Consulting Satisfied</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>