force-app/main/default/objects/Customer_Survey__c/fields/Consulting_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Submitted__c</fullName>
    <inlineHelpText>Overall, how satisfied were you with the consulting deliverable?</inlineHelpText>
    <label>Consulting Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>