force-app/main/default/objects/Customer_Survey__c/fields/Crew_supervisor_was_involved__c.field-meta.xml
<CustomField>
    <fullName>Crew_supervisor_was_involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew supervisor was involved?</label>
    <type>Checkbox</type>
</CustomField>