force-app/main/default/objects/Customer_Survey__c/fields/Customer_Survey_Getfeedback_Match__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Getfeedback_Match__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Customer Survey Getfeedback Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>