force-app/main/default/objects/Customer_Survey__c/fields/Date_of_Follow_Up_Discussion_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Follow_Up_Discussion_with_Client__c</fullName>
    <description>Date of ATI management call with property owner or representative to discuss the situation and attempt to rectify the problem.</description>
    <label>Date of Follow-Up Discussion with Client</label>
    <type>Date</type>
</CustomField>