force-app/main/default/objects/Customer_Survey__c/fields/Disciplinary_action_description__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_action_description__c</fullName>
    <inlineHelpText>Advise when action was or will be taken, issue addressed, and to whom disciplinary action was issued.</inlineHelpText>
    <label>Disciplinary action description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>