force-app/main/default/objects/Customer_Survey__c/fields/Disciplinary_action_needed__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_action_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disciplinary action needed?</label>
    <type>Checkbox</type>
</CustomField>