force-app/main/default/objects/Customer_Survey__c/fields/Email_Response__c.field-meta.xml
<CustomField>
    <fullName>Email_Response__c</fullName>
    <label>Email Response</label>
    <type>TextArea</type>
</CustomField>