force-app/main/default/objects/Customer_Survey__c/fields/Environmental_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environmental Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_SurveysQmAB</relationshipName>
    <type>Lookup</type>
</CustomField>