force-app/main/default/objects/Customer_Survey__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <description>Survey Question 7. Estimate - The Project Manager created a detailed and thorough estimate.</description>
    <label>Estimate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>