force-app/main/default/objects/Customer_Survey__c/fields/EVP_1__c.field-meta.xml
<CustomField>
    <fullName>EVP_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EVP 1 field populated via Process Builder from the associated Office record</description>
    <label>EVP 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys7</relationshipName>
    <type>Lookup</type>
</CustomField>