force-app/main/default/objects/Customer_Survey__c/fields/EVP_2__c.field-meta.xml
<CustomField>
    <fullName>EVP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EVP 2 field populated via Process Builder from the associated Office record</description>
    <label>EVP 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys8</relationshipName>
    <type>Lookup</type>
</CustomField>