force-app/main/default/objects/Customer_Survey__c/fields/Excellent_Service__c.field-meta.xml
<CustomField>
    <fullName>Excellent_Service__c</fullName>
    <description>Survey Question 13. Do you have any suggestions for improving our services?</description>
    <label>Excellent Service</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>