force-app/main/default/objects/Customer_Survey__c/fields/Explanation_of_unresolved_deficiencies__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_unresolved_deficiencies__c</fullName>
    <label>Explanation of unresolved deficiencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>