force-app/main/default/objects/Customer_Survey__c/fields/Insurance_Agency__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agency__c</fullName>
    <label>Insurance Agency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>