force-app/main/default/objects/Customer_Survey__c/fields/Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent__c</fullName>
    <description>Survey Question 14. Do you recall the name and contact information of your insurance agent who sold you your insurance policy? If you&apos;re able to provide this information, American Technologies, Inc. will make a donation to the American Red Cross Disaster Relief Fund.</description>
    <label>Insurance Agent</label>
    <type>TextArea</type>
</CustomField>