force-app/main/default/objects/Customer_Survey__c/fields/Job_Team_Account_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>Job_Team_Account_Executive_2__c</fullName>
    <label>Job Team Account Executive 2</label>
    <type>Email</type>
</CustomField>