force-app/main/default/objects/Customer_Survey__c/fields/Learnings_leveraged_and_shared__c.field-meta.xml
<CustomField>
    <fullName>Learnings_leveraged_and_shared__c</fullName>
    <inlineHelpText>List any learnings leveraged and shared in a general sense to prevent a similar situation from occurring in the future. Maintain confidentiality as needed.</inlineHelpText>
    <label>Learnings leveraged and shared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>