force-app/main/default/objects/Customer_Survey__c/fields/Likely_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_Recommend__c</fullName>
    <description>Survey Question 9. Likely to Recommend - I am likely to recommend American Technologies, Inc. to a friend/colleague.</description>
    <label>Likely to Recommend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>