force-app/main/default/objects/Customer_Survey__c/fields/Main_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Main_Complaints__c</fullName>
    <label>Main Complaints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Follow-through/Follow-up</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>