force-app/main/default/objects/Customer_Survey__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>Question 10:  How likely is it that you would recommend ATI to a friend, family member, or colleague?</description>
    <inlineHelpText>How likely is it that you would recommend ATI to a friend, family member, or colleague?</inlineHelpText>
    <label>NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>