force-app/main/default/objects/Customer_Survey__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>ATI_Job__r.Office2__r.Name</formula>
    <label>Office</label>
    <type>Text</type>
</CustomField>