force-app/main/default/objects/Customer_Survey__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office Manager field populated via Process Builder from the associated Office record</description>
    <label>Office Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys9</relationshipName>
    <type>Lookup</type>
</CustomField>