force-app/main/default/objects/Customer_Survey__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys3</relationshipName>
    <type>Lookup</type>
</CustomField>