force-app/main/default/objects/Customer_Survey__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity object</description>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Customer_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>