force-app/main/default/objects/Customer_Survey__c/fields/Organized_and_Professional__c.field-meta.xml
<CustomField>
    <fullName>Organized_and_Professional__c</fullName>
    <description>Survey Question 4. Organized and Professional - Each member of the ATI team was organized and displayed professionalism in each interaction. He/she adequately explained the process to me and showed his/her detailed knowledge of the services to be provided.</description>
    <label>Organized and Professional</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>