force-app/main/default/objects/Customer_Survey__c/fields/Other_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Other_Complaints__c</fullName>
    <label>Other Complaints</label>
    <length>255</length>
    <type>Text</type>
</CustomField>