force-app/main/default/objects/Customer_Survey__c/fields/Overall_Consultant_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Consultant_Score__c</fullName>
    <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c, 
(( PD_Communication__c + PD_Responsive__c + PD_Overall__c +  Consulting_Report__c  +  Consulting_Submitted__c  +  Consulting_Satisfied__c  + NPS__c ) / 7) / 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Consultant Score %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>