force-app/main/default/objects/Customer_Survey__c/fields/Overall_Score_10pt_Percent__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_10pt_Percent__c</fullName>
    <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(( PD_Communication__c +  PD_Responsive__c +  PD_Overall__c +  PM_Communication__c +  PM_Responsive__c +  PM_Monitor__c +  PM_Overall__c +  ATI_Team__c +  ATI_Overall_Experience__c  + NPS__c ) / 10) / 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score (10pt) Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>