force-app/main/default/objects/Customer_Survey__c/fields/Overall_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Percent__c</fullName>
    <formula>((Staff_Courteous_and_Helpful__c + Staff_Accessibility__c + Team_Appearance__c + Organized_and_Professional__c + Schedule__c + Quality_of_Workmanship__c + Estimate__c + Satisfactory_Work_Completion__c + Likely_to_Recommend__c ) / 9) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>