force-app/main/default/objects/Customer_Survey__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>IF(AND(NPS__c &gt; 6, NPS__c &lt; 9), 1, 0)</formula>
    <label>Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>