force-app/main/default/objects/Customer_Survey__c/fields/PD_Communication__c.field-meta.xml
<CustomField>
    <fullName>PD_Communication__c</fullName>
    <description>Question 1:  During your [Division] project, did [Project Director] effectively communicate the expectations of the job and the process involved?</description>
    <inlineHelpText>During your [Division] project, did [Project Director] effectively communicate the expectations of the job and the process involved?</inlineHelpText>
    <label>PD Communication</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>