force-app/main/default/objects/Customer_Survey__c/fields/PD_Overall__c.field-meta.xml
<CustomField>
    <fullName>PD_Overall__c</fullName>
    <description>Question 3: Overall, how satisfied were you with the service provided by [Project Director] during the [Division] phase of your project?</description>
    <inlineHelpText>Overall, how satisfied were you with the service provided by [Project Director] during the [Division] phase of your project?</inlineHelpText>
    <label>PD Overall</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>