force-app/main/default/objects/Customer_Survey__c/fields/PD_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>PD_Overall_Score__c</fullName>
    <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(PD_Communication__c + PD_Responsive__c + PD_Overall__c + ATI_Team__c + ATI_Overall_Experience__c + NPS__c)/6/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Overall Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>