force-app/main/default/objects/Customer_Survey__c/fields/PD_Responsive__c.field-meta.xml
<CustomField>
    <fullName>PD_Responsive__c</fullName>
    <description>Question 2: Was [Project Director] responsive to you and answer all of your questions in a timely manner?</description>
    <inlineHelpText>Was [Project Director] responsive to you and answer all of your questions in a timely manner?</inlineHelpText>
    <label>PD Responsive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>