force-app/main/default/objects/Customer_Survey__c/fields/Plan_of_action_for_reoccurring_concern__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_action_for_reoccurring_concern__c</fullName>
    <label>Plan of action for reoccurring concern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>