force-app/main/default/objects/Customer_Survey__c/fields/PM_Communication__c.field-meta.xml
<CustomField>
    <fullName>PM_Communication__c</fullName>
    <description>Question 4: Did [Project Manager] communicate a schedule with you for the [Division] project and did we meet those expectations?</description>
    <inlineHelpText>Did [Project Manager] communicate a schedule with you for the [Division] project and did we meet those expectations?</inlineHelpText>
    <label>PM Communication</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>