force-app/main/default/objects/Customer_Survey__c/fields/PM_Monitor__c.field-meta.xml
<CustomField>
    <fullName>PM_Monitor__c</fullName>
    <description>Question 6: Did [Project Manager] effectively monitor your job for workmanship &amp; cleanliness during your [Division] project?</description>
    <inlineHelpText>Did [Project Manager] effectively monitor your job for workmanship &amp; cleanliness during your [Division] project?</inlineHelpText>
    <label>PM Monitor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>