force-app/main/default/objects/Customer_Survey__c/fields/PM_Overall__c.field-meta.xml
<CustomField>
    <fullName>PM_Overall__c</fullName>
    <description>Question 7: Overall, how satisfied were you with the service provided by [Project Manager] during the [Division] phase of your project?</description>
    <inlineHelpText>Overall, how satisfied were you with the service provided by [Project Manager] during the [Division] phase of your project?</inlineHelpText>
    <label>PM Overall</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>