force-app/main/default/objects/Customer_Survey__c/fields/PM_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>PM_Overall_Score__c</fullName>
    <formula>IF(Overall_Score_Percent__c &gt;0.0, Overall_Score_Percent__c,
(PM_Communication__c + PM_Responsive__c + PM_Monitor__c + PM_Overall__c + ATI_Team__c + ATI_Overall_Experience__c + NPS__c)/7/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Overall Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>