force-app/main/default/objects/Customer_Survey__c/fields/PM_Responsive__c.field-meta.xml
<CustomField>
    <fullName>PM_Responsive__c</fullName>
    <description>Question 5: Was [Project Manager] responsive to you and answer all of your questions in a timely manner?</description>
    <inlineHelpText>Was [Project Manager] responsive to you and answer all of your questions in a timely manner?</inlineHelpText>
    <label>PM Responsive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>