force-app/main/default/objects/Customer_Survey__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>