force-app/main/default/objects/Customer_Survey__c/fields/Project_Manager_new__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveysol4f</relationshipName>
    <type>Lookup</type>
</CustomField>