force-app/main/default/objects/Customer_Survey__c/fields/Project_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Contact__c</fullName>
    <formula>ATI_Job__r.Project_Site_Contact_Name__r.FirstName  &amp; &quot; &quot; &amp;  ATI_Job__r.Project_Site_Contact_Name__r.LastName</formula>
    <label>Project Site Contact</label>
    <type>Text</type>
</CustomField>