force-app/main/default/objects/Customer_Survey__c/fields/Project_Site_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Contact_Email__c</fullName>
    <formula>ATI_Job__r.Project_Site_Contact_Email__c</formula>
    <label>Project Site Contact Email</label>
    <type>Text</type>
</CustomField>