force-app/main/default/objects/Customer_Survey__c/fields/Project_Site_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Site Contact lookup field populated via Process Builder flow &apos;Project Site Contact Population onto Customer Survey&apos; from associated Job record, in order to send them an email alert thanking them for their participation in an ATI survey.</description>
    <label>Project Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Surveys</relationshipLabel>
    <relationshipName>Customer_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>