force-app/main/default/objects/Customer_Survey__c/fields/Quality_of_Workmanship__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Workmanship__c</fullName>
    <description>Survey Question 6. Quality of Workmanship - I am satisfied with the quality of materials used and workmanship displayed on my/our project.</description>
    <label>Quality of Workmanship</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>