force-app/main/default/objects/Customer_Survey__c/fields/Reference_and_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Reference_and_Waiver__c</fullName>
    <description>Survey Question 10. Reference and Waiver - American Technologies, Inc. may use me as a reference and I authorize them to use the contents of this survey in advertising, promotional materials, and references.  I further authorize ATI to use and publish my name, company (if applicable), city, and state in connection with this survey.</description>
    <inlineHelpText>ATI may use me as a reference and I authorize them to use the contents of this survey in advertising, promotional materials, and references.  I further authorize ATI to use and publish my name, company (if applicable), city, and state in connection with</inlineHelpText>
    <label>Reference and Waiver</label>
    <type>TextArea</type>
</CustomField>