force-app/main/default/objects/Customer_Survey__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regional Manager field populated via Process Builder from the associated Office record</description>
    <label>Regional Manager (DEL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_SurveyswjaO</relationshipName>
    <type>Lookup</type>
</CustomField>