force-app/main/default/objects/Customer_Survey__c/fields/Reoccurring_concern_for_this_ATI_person__c.field-meta.xml
<CustomField>
    <fullName>Reoccurring_concern_for_this_ATI_person__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a reoccurring concern raised on different surveys for the same person or situation.</inlineHelpText>
    <label>Reoccurring concern for this ATI person?</label>
    <type>Checkbox</type>
</CustomField>