force-app/main/default/objects/Customer_Survey__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <formula>IF( Email_Response__c &lt;&gt; null, Email_Response__c , SMS_Response__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Type</label>
    <type>Text</type>
</CustomField>