force-app/main/default/objects/Customer_Survey__c/fields/Satisfactory_Work_Completion__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Work_Completion__c</fullName>
    <description>Survey Question 8. Satisfactory Work Completion - The work was completed to my satisfaction.</description>
    <label>Satisfactory Work Completion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>