force-app/main/default/objects/Customer_Survey__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Survey Question 5. Schedule - American Technologies, Inc. adhered to our agreed upon schedule.</description>
    <label>Schedule</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>