force-app/main/default/objects/Customer_Survey__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>(Staff_Courteous_and_Helpful__c  +  Staff_Accessibility__c  +  Team_Appearance__c  +  Organized_and_Professional__c  +  Schedule__c  +  Quality_of_Workmanship__c  +  Estimate__c  +  Satisfactory_Work_Completion__c  +  Likely_to_Recommend__c ) / 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>