force-app/main/default/objects/Customer_Survey__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Question 12: Tell us what you think of the service you received from ATI.  In what area(s) were you most satisfied with your experience and why?  How can we improve?  Is there anyone at American Technologies, Inc. you would like to recognize for having provided exceptional customer service?</description>
    <inlineHelpText>Tell us what you think of the service you received from ATI.  In what area(s) were you most satisfied with your experience and why?  How can we improve?  Is there anyone at ATI you would like to recognize for having provided exceptional customer service?</inlineHelpText>
    <label>Service</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>