force-app/main/default/objects/Customer_Survey__c/fields/SMS_Response__c.field-meta.xml
<CustomField>
    <fullName>SMS_Response__c</fullName>
    <label>SMS Response</label>
    <type>TextArea</type>
</CustomField>