force-app/main/default/objects/Customer_Survey__c/fields/Staff_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Staff_Accessibility__c</fullName>
    <description>Survey Question 2. Staff Accessibility - ATI staff was accessible and responsive to my request. I was contacted within 24 hours of my inquiry.</description>
    <label>Staff Accessibility</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>