force-app/main/default/objects/Customer_Survey__c/fields/Staff_Courteous_and_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Staff_Courteous_and_Helpful__c</fullName>
    <description>Survey Question 1. Staff Courteous and Helpful - The ATI staff was courteous and helpful at all times</description>
    <label>Staff Courteous and Helpful</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>